tests/03-typecheck/11-arith-ptr.stack
func invalid_ptr_arithmetic (int) (ptr) in
    ptr.+
end
